originir解耦/TodoLangGrammarParser.py
# Generated from TodoLangGrammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TodoLangGrammarParser ( Parser ):

    grammarFileName = "TodoLangGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PI'", "'QINIT'", "'CREG'", "'q'", "'c'", 
                     "'BARRIER'", "'QGATE'", "'ENDQGATE'", "'ECHO'", "'H'", 
                     "'X'", "'NOT'", "'T'", "'S'", "'Y'", "'Z'", "'X1'", 
                     "'Y1'", "'Z1'", "'I'", "'U2'", "'RPhi'", "'U3'", "'U4'", 
                     "'RX'", "'RY'", "'RZ'", "'U1'", "'CNOT'", "'CZ'", "'CU'", 
                     "'ISWAP'", "'SQISWAP'", "'SWAP'", "'ISWAPTHETA'", "'CR'", 
                     "'TOFFOLI'", "'CP'", "'DAGGER'", "'ENDDAGGER'", "'CONTROL'", 
                     "'ENDCONTROL'", "'QIF'", "'ELSE'", "'ENDQIF'", "'QWHILE'", 
                     "'ENDQWHILE'", "'MEASURE'", "'RESET'", "'='", "'>'", 
                     "'<'", "'!'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
                     "'||'", "'+'", "'-'", "'*'", "'/'", "','", "'('", "')'", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "PI", "QINIT_KEY", "CREG_KEY", "Q_KEY", 
                      "C_KEY", "BARRIER_KEY", "QGATE_KEY", "ENDQGATE_KEY", 
                      "ECHO_GATE", "H_GATE", "X_GATE", "NOT_GATE", "T_GATE", 
                      "S_GATE", "Y_GATE", "Z_GATE", "X1_GATE", "Y1_GATE", 
                      "Z1_GATE", "I_GATE", "U2_GATE", "RPHI_GATE", "U3_GATE", 
                      "U4_GATE", "RX_GATE", "RY_GATE", "RZ_GATE", "U1_GATE", 
                      "CNOT_GATE", "CZ_GATE", "CU_GATE", "ISWAP_GATE", "SQISWAP_GATE", 
                      "SWAPZ1_GATE", "ISWAPTHETA_GATE", "CR_GATE", "TOFFOLI_GATE", 
                      "CP_GATE", "DAGGER_KEY", "ENDDAGGER_KEY", "CONTROL_KEY", 
                      "ENDCONTROL_KEY", "QIF_KEY", "ELSE_KEY", "ENDIF_KEY", 
                      "QWHILE_KEY", "ENDQWHILE_KEY", "MEASURE_KEY", "RESET_KEY", 
                      "ASSIGN", "GT", "LT", "NOT", "EQ", "LEQ", "GEQ", "NE", 
                      "AND", "OR", "PLUS", "MINUS", "MUL", "DIV", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACK", "RBRACK", "NEWLINE", 
                      "Identifier", "Integer_Literal", "Double_Literal", 
                      "Digit_Sequence", "REALEXP", "WhiteSpace", "SingleLineComment", 
                      "WS" ]

    RULE_translationunit = 0
    RULE_declaration = 1
    RULE_qinit_declaration = 2
    RULE_cinit_declaration = 3
    RULE_quantum_gate_declaration = 4
    RULE_index = 5
    RULE_c_KEY_declaration = 6
    RULE_q_KEY_declaration = 7
    RULE_single_gate_without_parameter_declaration = 8
    RULE_single_gate_with_one_parameter_declaration = 9
    RULE_single_gate_with_two_parameter_declaration = 10
    RULE_single_gate_with_three_parameter_declaration = 11
    RULE_single_gate_with_four_parameter_declaration = 12
    RULE_double_gate_without_parameter_declaration = 13
    RULE_double_gate_with_one_parameter_declaration = 14
    RULE_double_gate_with_four_parameter_declaration = 15
    RULE_triple_gate_without_parameter_declaration = 16
    RULE_define_gate_declaration = 17
    RULE_single_gate_without_parameter_type = 18
    RULE_single_gate_with_one_parameter_type = 19
    RULE_single_gate_with_two_parameter_type = 20
    RULE_single_gate_with_three_parameter_type = 21
    RULE_single_gate_with_four_parameter_type = 22
    RULE_double_gate_without_parameter_type = 23
    RULE_double_gate_with_one_parameter_type = 24
    RULE_double_gate_with_four_parameter_type = 25
    RULE_triple_gate_without_parameter_type = 26
    RULE_primary_expression = 27
    RULE_unary_expression = 28
    RULE_multiplicative_expression = 29
    RULE_addtive_expression = 30
    RULE_relational_expression = 31
    RULE_equality_expression = 32
    RULE_logical_and_expression = 33
    RULE_logical_or_expression = 34
    RULE_assignment_expression = 35
    RULE_expression = 36
    RULE_controlbit_list = 37
    RULE_statement = 38
    RULE_dagger_statement = 39
    RULE_control_statement = 40
    RULE_qelse_statement_fragment = 41
    RULE_qif_statement = 42
    RULE_qwhile_statement = 43
    RULE_measure_statement = 44
    RULE_reset_statement = 45
    RULE_barrier_statement = 46
    RULE_expression_statement = 47
    RULE_define_gate_statement = 48
    RULE_define_dagger_statement = 49
    RULE_define_control_statement = 50
    RULE_user_defined_gate = 51
    RULE_explist = 52
    RULE_exp = 53
    RULE_gate_func_statement = 54
    RULE_id = 55
    RULE_id_list = 56
    RULE_gate_name = 57
    RULE_constant_expression = 58
    RULE_arithmetic_op = 59
    RULE_unary_op = 60
    RULE_constant = 61

    ruleNames =  [ "translationunit", "declaration", "qinit_declaration", 
                   "cinit_declaration", "quantum_gate_declaration", "index", 
                   "c_KEY_declaration", "q_KEY_declaration", "single_gate_without_parameter_declaration", 
                   "single_gate_with_one_parameter_declaration", "single_gate_with_two_parameter_declaration", 
                   "single_gate_with_three_parameter_declaration", "single_gate_with_four_parameter_declaration", 
                   "double_gate_without_parameter_declaration", "double_gate_with_one_parameter_declaration", 
                   "double_gate_with_four_parameter_declaration", "triple_gate_without_parameter_declaration", 
                   "define_gate_declaration", "single_gate_without_parameter_type", 
                   "single_gate_with_one_parameter_type", "single_gate_with_two_parameter_type", 
                   "single_gate_with_three_parameter_type", "single_gate_with_four_parameter_type", 
                   "double_gate_without_parameter_type", "double_gate_with_one_parameter_type", 
                   "double_gate_with_four_parameter_type", "triple_gate_without_parameter_type", 
                   "primary_expression", "unary_expression", "multiplicative_expression", 
                   "addtive_expression", "relational_expression", "equality_expression", 
                   "logical_and_expression", "logical_or_expression", "assignment_expression", 
                   "expression", "controlbit_list", "statement", "dagger_statement", 
                   "control_statement", "qelse_statement_fragment", "qif_statement", 
                   "qwhile_statement", "measure_statement", "reset_statement", 
                   "barrier_statement", "expression_statement", "define_gate_statement", 
                   "define_dagger_statement", "define_control_statement", 
                   "user_defined_gate", "explist", "exp", "gate_func_statement", 
                   "id", "id_list", "gate_name", "constant_expression", 
                   "arithmetic_op", "unary_op", "constant" ]

    EOF = Token.EOF
    PI=1
    QINIT_KEY=2
    CREG_KEY=3
    Q_KEY=4
    C_KEY=5
    BARRIER_KEY=6
    QGATE_KEY=7
    ENDQGATE_KEY=8
    ECHO_GATE=9
    H_GATE=10
    X_GATE=11
    NOT_GATE=12
    T_GATE=13
    S_GATE=14
    Y_GATE=15
    Z_GATE=16
    X1_GATE=17
    Y1_GATE=18
    Z1_GATE=19
    I_GATE=20
    U2_GATE=21
    RPHI_GATE=22
    U3_GATE=23
    U4_GATE=24
    RX_GATE=25
    RY_GATE=26
    RZ_GATE=27
    U1_GATE=28
    CNOT_GATE=29
    CZ_GATE=30
    CU_GATE=31
    ISWAP_GATE=32
    SQISWAP_GATE=33
    SWAPZ1_GATE=34
    ISWAPTHETA_GATE=35
    CR_GATE=36
    TOFFOLI_GATE=37
    CP_GATE=38
    DAGGER_KEY=39
    ENDDAGGER_KEY=40
    CONTROL_KEY=41
    ENDCONTROL_KEY=42
    QIF_KEY=43
    ELSE_KEY=44
    ENDIF_KEY=45
    QWHILE_KEY=46
    ENDQWHILE_KEY=47
    MEASURE_KEY=48
    RESET_KEY=49
    ASSIGN=50
    GT=51
    LT=52
    NOT=53
    EQ=54
    LEQ=55
    GEQ=56
    NE=57
    AND=58
    OR=59
    PLUS=60
    MINUS=61
    MUL=62
    DIV=63
    COMMA=64
    LPAREN=65
    RPAREN=66
    LBRACK=67
    RBRACK=68
    NEWLINE=69
    Identifier=70
    Integer_Literal=71
    Double_Literal=72
    Digit_Sequence=73
    REALEXP=74
    WhiteSpace=75
    SingleLineComment=76
    WS=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TranslationunitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TodoLangGrammarParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(TodoLangGrammarParser.NEWLINE)
            else:
                return self.getToken(TodoLangGrammarParser.NEWLINE, i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TodoLangGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(TodoLangGrammarParser.DeclarationContext,i)


        def gate_func_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TodoLangGrammarParser.Gate_func_statementContext)
            else:
                return self.getTypedRuleContext(TodoLangGrammarParser.Gate_func_statementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TodoLangGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(TodoLangGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return TodoLangGrammarParser.RULE_translationunit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationunit" ):
                listener.enterTranslationunit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationunit" ):
                listener.exitTranslationunit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationunit" ):
                return visitor.visitTranslationunit(self)
            else:
                return visitor.visitChildren(self)




    def translationunit(self):

        localctx = TodoLangGrammarParser.TranslationunitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translationunit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==69:
                self.state = 124
                self.match(TodoLangGrammarParser.NEWLINE)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==3:
                self.state = 130
                self.declaration()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self.gate_func_statement() 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.statement()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3468698326499585762) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 225) != 0)):
                    break

            self.state = 147
            self.match(TodoLangGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qinit_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Qinit_declarationContext,0)


        def cinit_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Cinit_declarationContext,0)


        def getRuleIndex(self):
            return TodoLangGrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = TodoLangGrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.qinit_declaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.cinit_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Qinit_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QINIT_KEY(self):
            return self.getToken(TodoLangGrammarParser.QINIT_KEY, 0)

        def Integer_Literal(self):
            return self.getToken(TodoLangGrammarParser.Integer_Literal, 0)

        def NEWLINE(self):
            return self.getToken(TodoLangGrammarParser.NEWLINE, 0)

        def getRuleIndex(self):
            return TodoLangGrammarParser.RULE_qinit_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQinit_declaration" ):
                listener.enterQinit_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQinit_declaration" ):
                listener.exitQinit_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQinit_declaration" ):
                return visitor.visitQinit_declaration(self)
            else:
                return visitor.visitChildren(self)




    def qinit_declaration(self):

        localctx = TodoLangGrammarParser.Qinit_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qinit_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(TodoLangGrammarParser.QINIT_KEY)
            self.state = 154
            self.match(TodoLangGrammarParser.Integer_Literal)
            self.state = 155
            self.match(TodoLangGrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cinit_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREG_KEY(self):
            return self.getToken(TodoLangGrammarParser.CREG_KEY, 0)

        def Integer_Literal(self):
            return self.getToken(TodoLangGrammarParser.Integer_Literal, 0)

        def NEWLINE(self):
            return self.getToken(TodoLangGrammarParser.NEWLINE, 0)

        def getRuleIndex(self):
            return TodoLangGrammarParser.RULE_cinit_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCinit_declaration" ):
                listener.enterCinit_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCinit_declaration" ):
                listener.exitCinit_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCinit_declaration" ):
                return visitor.visitCinit_declaration(self)
            else:
                return visitor.visitChildren(self)




    def cinit_declaration(self):

        localctx = TodoLangGrammarParser.Cinit_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cinit_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(TodoLangGrammarParser.CREG_KEY)
            self.state = 158
            self.match(TodoLangGrammarParser.Integer_Literal)
            self.state = 159
            self.match(TodoLangGrammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Quantum_gate_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_gate_without_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Single_gate_without_parameter_declarationContext,0)


        def single_gate_with_one_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Single_gate_with_one_parameter_declarationContext,0)


        def single_gate_with_two_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Single_gate_with_two_parameter_declarationContext,0)


        def single_gate_with_three_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Single_gate_with_three_parameter_declarationContext,0)


        def single_gate_with_four_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Single_gate_with_four_parameter_declarationContext,0)


        def double_gate_without_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Double_gate_without_parameter_declarationContext,0)


        def double_gate_with_one_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Double_gate_with_one_parameter_declarationContext,0)


        def double_gate_with_four_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Double_gate_with_four_parameter_declarationContext,0)


        def triple_gate_without_parameter_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Triple_gate_without_parameter_declarationContext,0)


        def define_gate_declaration(self):
            return self.getTypedRuleContext(TodoLangGrammarParser.Define_gate_declarationContext,0)


        def getRuleIndex(self):
            return TodoLangGrammarParser.RULE_quantum_gate_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantum_gate_declaration" ):
                listener.enterQuantum_gate_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantum_gate_declaration" ):
                listener.exitQuantum_gate_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantum_gate_declaration" ):
                return visitor.visitQuantum_gate_declaration(self)
            else:
                return visitor.visitChildren(self)




    def quantum_gate_declaration(self):
